# AudioVisualizer

./: .gitmodules  CMakeLists.txt  COMP371ProjectReport.html  Notes  README.md  Todo  main.cpp
glad/: glad.h
imgui-1.89.4/examples/example_android_opengl3/: CMakeLists.txt
imgui-1.89.4/misc/single_file/: imgui_single_file.h
include/: AbstractMode.h  AudioVisualizer.h  FFTStream.h  LineOutStream.h  Mesh.h  Model.h  Mutex.h  Shader.h  WithFFT.h
libs/gist/src/: CMakeLists.txt  Gist.h
libs/gist/tests/: CMakeLists.txt
shaders/: fragment_shader.frag  light_fragment_shader.frag  vertex_shader.vert
src/: AbstractMode.cpp  AudioVisualizer.cpp  Bar.cpp  Bar.h  FFTStream.cpp  LineOutStream.cpp  Mesh.cpp  Model.cpp  Shader.cpp  WithFFT.cpp
